# avvai

./: .gitignore  CLAUDE.md  benchmark_results.json  build-tokens.js  drizzle.config.ts  index.html  main.py  opencode.json  package.json  pallette.html  pnpm-workspace.yaml  pyproject.toml  styleguide.html  tokens.css  tokens.js  vite.config.ts
.github/: copilot-instructions.md
avvai-backend/: Cargo.toml
avvai-backend/extract-image/: Cargo.toml
avvai-backend/extract-image/src/: main.rs
avvai-backend/src/: main.rs
avvai-backend/src/core/: db.rs  dictionary.rs  dictionary_cache.rs  flashcards.rs  lemmatise.rs  lesson.rs  media.rs  mod.rs  openrouter.rs  progress.rs
avvai-backend/src/http/: admin_auth.rs
avvai-backend/src/routes/: dictionary.rs  flashcards.rs  lemmatise.rs  lesson.rs  mod.rs  progress.rs
avvai-backend/src/routes/admin/: dictionary_cache.rs  lessons.rs  media.rs  mod.rs
avvai-backend/src/services/: admin_auth.rs  dictionary_cache.rs  mod.rs
avvai-cms/: AGENTS.md  README.md  package-lock.json  package.json  vite.config.ts
avvai-cms/src/: app.d.ts  app.html  hooks.server.ts
avvai-cms/src/lib/: layoutContext.ts
avvai-cms/src/lib/server/: adminProxy.ts
avvai-cms/src/lib/styles/: theme.css
avvai-cms/src/lib/types/: admin.ts  lesson.ts
avvai-cms/src/routes/: +layout.svelte  +page.svelte
avvai-cms/src/routes/dictionary/: +page.svelte
avvai-cms/src/routes/lessons/: +page.svelte
avvai-cms/src/routes/login/: +page.svelte
avvai-cms/src/routes/media/: +page.svelte
avvai-frontend/: CLAUDE.md  README.md  dashboard-manuscript-mockup.html  dashboard-mockup-soft-modern.html  dashboard-organic-mockup.html  package.json  svelte.config.js  vite.config.ts
avvai-frontend/.storybook/: main.ts  preview-head.html  preview.ts
avvai-frontend/docs/: design-system.md
avvai-frontend/mockup/: landing-reimagined.html  learning-mockup.html  thinai.html  ux-spec.html
avvai-frontend/src/: app.html
avvai-frontend/src/lib/: index.ts
avvai-frontend/src/lib/actions/: dictionary-lookup.ts
avvai-frontend/src/lib/components/: ClickableText.svelte  DictionaryPanel.svelte  DictionaryPopup.svelte  Drawer.svelte  IconButton.svelte  Reader.svelte  ReadingSettingsMenu.svelte  TableOfContents.svelte
avvai-frontend/src/lib/config/: fonts.ts
avvai-frontend/src/lib/content/: thirukkural.txt
avvai-frontend/src/lib/services/: api-client.ts  dictionary.ts  (+1 more)
avvai-frontend/src/routes/: +layout.svelte  +page.svelte
avvai-frontend/src/stories/: Button.stories.ts  Header.stories.ts  Page.stories.ts
data/: certificatesyllabus.md  tamilvu-pdfs.txt
data/cikaram/: compare.html
data/cikaram/html/: index.html  page-001.html  page-002.html  page-003.html  page-004.html  page-005.html  page-006.html  page-007.html  page-008.html  page-009.html  page-010.html
data/cikaram/html-flash/: index.html  page-001.html  page-002.html  page-003.html  page-004.html  page-005.html  page-006.html  page-007.html  page-008.html  page-009.html  page-010.html  page-011.html  page-012.html  page-013.html
data/lessons/: cikaram-1-10.json  cikaram-1-2.json  cikaram-1-3.json  cikaram-1-4.json  cikaram-1-6.json  cikaram-1-7.json  cikaram-1-8.json  cikaram-1-9.json  manifest.json
data/tamilvu-courses/a011/: a0111.json
db/: index.ts  schema.ts
db/learn/: README.md  app.db  index.ts  package.json  schema.ts
docs/: ARCHITECTURE.md  architecture.md
mockups/: 04-lesson-study.html
mockups/font-gallery/: go.mod  main.go
mockups/font-gallery/static/: styles.css
mockups/font-gallery/templates/: gallery.templ  gallery_templ.go
mockups/green/: index.html  lesson.html  server.ts  styles.css  tokens.css
mockups/green/partials/: quiz-complete.html  quiz-correct.html  quiz-incorrect.html  quiz-q2-correct.html
mockups/style-guide/: index.html  vite.config.ts
mockups/style-guide/client/: Mockup.tsx  fonts.ts  index.tsx  mockup.css.ts  styles.css.ts  theme.css.ts  themeData.ts
nannool/: Cargo.toml  README.md  TODO.md
nannool/crates/nannool-checker/: Cargo.toml
nannool/crates/nannool-checker/src/: checker.rs  diagnostic.rs  heuristics.rs  lib.rs  sdp.rs  speller.rs  syntax.rs  tokenizer.rs
nannool/crates/nannool-cli/: Cargo.toml
nannool/crates/nannool-cli/src/: main.rs
nannool/crates/nannool-morph/: Cargo.toml  build.rs
nannool/crates/nannool-morph/src/: analyzer.rs  backend.rs  bundled.rs  error.rs  ffi.rs  foma_ffi.rs  fst_wrapper.rs  lexicon.rs  lib.rs  noun.rs  suffix.rs  verb.rs
nannool/crates/nannool-rules/: Cargo.toml
nannool/crates/nannool-rules/src/: engine.rs  lib.rs  loader.rs  patterns.rs  sandhi.rs  tests_debug.rs  tests_new_rules.rs  verses.rs
nannool/crates/tamil-unicode/: Cargo.toml
nannool/crates/tamil-unicode/src/: grapheme.rs  letters.rs  lib.rs  normalize.rs  transform.rs
nannool/data/: tamilgeminibenchmark.txt  tamilgeminispellingbenchmark.txt
nannool/data/nannool/: exceptions.toml  punariyar.toml  rules.toml
nannool/data/tests/: sample.txt  sandhi_tests.toml
nannool/scripts/: benchmark.py  eval_benchmark.py  parse_nannool.py
scripts/: ocr_gemini.py  ocr_gemini_flash.py
src/: index.html  index.ts  vite.config.ts
src/api/: index.ts
src/client/: Lesson.tsx  components.css  index.tsx  lesson.css.ts  lessonData.ts  styles.css.ts  theme.css.ts  tokens.css
src/server/: index.tsx
src/shared/: types.ts
src/shared/components/: LessonCard.tsx  LessonContainer.tsx  Sidebar.tsx  index.ts
src/shared/styles/: cards.css.ts  sidebar.css.ts  theme.css.ts  theme.ts
(+144 files in other folders)
