[project]
name = "avvai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shahriyyah", email = "shahriyyah@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "pillow>=12.0.0",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
