[package]
name = "avvai-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
pdfium-render = "0.8"
image = "0.25"

[profile.dev]
opt-level = 0
debug = 0

[profile.dev.package."*"]
opt-level = 3
