[package]
name = "avvai-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
pdfium-render = "0.8"
image = "0.25"
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15"
serde_json = "1"
async-trait = "0.1"

chrono = { version = "0.4", features = ["clock"] }
fsrs = "5.2.0"
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.dev]
opt-level = 0
debug = 0

[profile.dev.package."*"]
opt-level = 3
