[package]
name = "nannool-morph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tamil morphological analyzer using ThamizhiMorph FST models"

[dependencies]
serde.workspace = true
thiserror.workspace = true
libc = "0.2"
tempfile = "3.24.0"

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
pretty_assertions.workspace = true
